--- a/pages/technical.html
+++ b/pages/technical.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Blog
+title: Technical
 weight: 2
-permalink: /blog/
+permalink: /Technical/
 ---
 
 {% include blog/search.html %}
